Added IPv6 support

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 *.lai
 *.la
 *.a
+
+.sconsign.dblite
+.cproject
+.project
+.settings
+examples/exampleTcpClientMain
+examples/exampleTcpServerMain
